<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.habijabi.mealplanner.Grocery">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/remind_you"
        android:id="@+id/textView4" />



    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/create"
        android:background="@drawable/buttonshape"
        android:onClick="sel_ingredients"
        android:id="@+id/select_ingredients"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:background="@drawable/buttonshape"
        android:onClick="view_list"
        android:id="@+id/view_list"
        android:layout_gravity="right"
        android:layout_alignTop="@+id/select_ingredients"
        android:layout_toEndOf="@+id/select_ingredients"
        android:layout_marginStart="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:id="@+id/textView"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/select_ingredients"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
